@@ -81,10 +81,11 @@ Produce PNG files instead of TIFF files.  See above for the restrictions.
 Compress the data in TIFF files with the type of compression indicated.  The
 most useful compression types are LZW (value 5), Zip or Deflate (value 8), and
 JPEG (value 7).  For these types, the value can be given as a text string:
-"lzw", "zip", or "jpeg".  On Linux, see /usr/include/tiff.h for other numeric
-values that can be entered.  Not all of these options will be available on all
-operating systems.  Also note that JPEG compression is not available with
-16-bit data.
+"lzw", "zip", or "jpeg".  These are available on all operating systems when
+running with the TIFF libraries distributed with IMOD.  On Linux, see 
+/usr/include/tiff.h for other numeric
+values that can be tried; some of these will work, depending on the data type.
+Also note that JPEG compression is not available with 16-bit data.
 .TP
 .B -q <value>
 Set the quality for JPEG or ZIP compression (ZIP compression is used in PNG
